samples/_failures_safe/1761280574_b42172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37c4f5bb.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_37c4f5bb.c:143: error: expected ‘{’ at end of input
